# whatsapp-local-exporter

./: .gitignore  README.md  attachment_enumerator.py  backup_decryptor.py  backup_locator.py  backup_manifest_parser.py  cli.py  dedupe.py  exporter.py  fallback_ui.py  manifest.py  pyproject.toml  requirements.txt  sample_dry_run_output.txt  sample_export_output.txt  schema_inspector.py  utils.py  whatsapp_locator.py
whatsapp_local_exporter/: __init__.py  __main__.py  cli.py  discovery.py  exporter.py  fallback_ui.py
